Fix uneven height of cards on data explore page

--- a/angular/src/app/data/data-list/data-list.component.scss
+++ b/angular/src/app/data/data-list/data-list.component.scss
@@ -1,3 +1,5 @@
+@import '~ddap-common-lib/styles/modules/colors';
+
 .ddap-card {
   vertical-align: top;
   min-width: 20rem;
@@ -10,7 +12,8 @@
   padding-bottom: 0.5rem;
 
   mat-card-title {
-    word-break: break-all;
+    min-height: 3rem;
+    max-height: 3rem;
   }
 
   img {
@@ -31,6 +34,12 @@
   mat-card-content {
     margin-left: 1rem;
     margin-right: 1rem;
+    min-height: 3rem;
+    max-height: 3rem;
+
+    p {
+      color: $color-grey;
+    }
   }
 }
 
